Multi type actor binaries, thread security