@@ -10,8 +10,10 @@ HOST=${HOST_IN:-localhost}
 PORT=${PORT_IN:-12345}
 LOG_PATH=${LOG_PATH_IN:-log.txt}
 
+TRUSTED_CODEBASE=$(dirname "$0")/${JAR}
+
 IS_MATCH=""
-if [ $4 = "match" ]; then
+if [[ $4 = "match" ]]; then
    IS_MATCH="true"
 else
   IS_MATCH="false"
@@ -23,12 +25,12 @@ echo "Working directory: $(pwd)"
 # set working directory to script location
 cd "$(dirname "$0")"
 
-if [ ! -f ${JAR} ]; then
+if [[ ! -f ${JAR} ]]; then
     echo "Jar file [$JAR] not found, attempting rebuild"
     mvn clean build
 fi
 
-if [ ! -f ${JAR} ]; then
+if [[ ! -f ${JAR} ]]; then
     echo "Jar file ($JAR) still not found, possible build error, exiting"
 fi
 
@@ -43,4 +45,4 @@ export TULKAS_LOG_PATH=${LOG_PATH}
 export TULKAS_READABLE_FILES=/dev/random:/dev/urandom
 
 echo "Starting client"
-java -Dlogback.configurationFile=logback.xml -jar ${JAR}
+timeout -k 1 300 java -Xmx512M -Djava.security.manager=hu.mktiti.tulkas.runtime.base.ThreadSecurityManager -Djava.security.policy=../client.policy -Dtrusted.codebase="${TRUSTED_CODEBASE}" -Dlogback.configurationFile=logback.xml -jar ${JAR}
